[package]
name = "himalia"
version = "0.1.0"
edition = "2021"
authors = ["Matt Cook <matt@mattcook.dev>"]
description = ""
readme = "README.md"
repository = "https://github.com/sciencefidelity/himalia"
license = "MIT or Apache-2.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = 1 }
nursery = { level = "deny", priority = 2 }
unwrap_used = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
anyhow = "1"
bincode = "1"
data-encoding = "2"
log = "0.4"
num = "0.4"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34"
